Fix body layout issue and apply new company and techs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,9 @@
 }
 
 body {
-  @apply text-purple-100 bg-indigo-950
+  @apply text-purple-100 bg-indigo-950;
+  max-width: 1580px;
+  margin: auto;
 }
 
 h1 {
@@ -75,4 +77,17 @@ ul.disc {
 
 input {
   background-color: darkgoldenrod;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(69%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.sliding {
+  animation: 8s slide infinite linear;
 }
